# Rach

./: .gitignore  CLAUDE.md  Rach_DAW_Specification.md  electron.vite.config.ts  index.html  package.json  pnpm-lock.yaml  test-e2e-phase2.ts  test-e2e-phase3.ts  test-e2e.ts  test-expansion-pack.ts  tsconfig.node.json  tsconfig.web.json  vite.config.mts  vite.renderer.config.mts
.claude/commands/: commit.md
electron/: main.ts
electron/native/: CMakeLists.txt  vst3-host.cc  vst3-processor.cc  vst3-scanner.cc
electron/services/: auth-service.ts  claude-agent-service.ts  plugin-host-service.ts  stem-separator.ts  suno-importer.ts  tool-executor.ts
mcp-server/: index.ts  state.ts  templates.ts
plugins/: rach-project-api.ts
scripts/: download-models.ts
server/: index.ts  ws.ts
server/routes/: files.ts  plugins.ts  stems.ts  suno.ts
src/: App.tsx  test-e2e-phase4.ts
src/assets/: main.css
src/components/AI/: AIPanel.tsx  AuthButton.tsx  StemSeparationPanel.tsx  SunoImportDialog.tsx  ToolExecutionCard.tsx
src/components/Layout/: MainLayout.tsx  Panel.tsx
src/components/Mixer/: EffectParameterEditor.tsx  EffectRack.tsx  MixerPanel.tsx  (+4 more)
src/hooks/: use-audio-engine.ts  use-effects.ts  use-keyboard-shortcuts.ts  use-mixer.ts  use-project-persistence.ts  use-stem-separation.ts  use-transport.ts  use-tutorial-watcher.ts
src/services/: backend-client.ts  browser-agent-service.ts  google-oauth-service.ts  oauth-service.ts  ravel-client.ts
src/stores/: agent-store.ts  auth-store.ts  project-store.ts  session-store.ts  transport-store.ts  tutorial-store.ts  ui-store.ts
src/utils/: apply-mutations.ts
(+114 files in other folders)
